syntax = "proto3";

package proto;
option go_package = "github.com/vpnhouse/tunnel/proto";

import "events.proto";
import "timestamp.proto";

service EventLogService {
  // FetchEvents streams back events to a caller
  rpc FetchEvents (FetchEventsRequest) returns (stream FetchEventsResponse) {}
  // [Optional] EventFetched steams up the notifiactions about fetched events
  rpc EventFetched (stream EventFetchedRequest) returns (EventFetchedResponse) {}
}

message FetchEventsRequest {
  // Start position or empty Offset treats to stream out the events from the from the beginning 
  EventLogPosition start_position = 1;
  // event_types contains the list of even types client interested in.
  // Empty list means all events. Optional.
  repeated EventType event_types = 3;
}

// FetchEventsResponse is a mirror of eventlog.Event struct.
message FetchEventsResponse {
  EventType event_type = 1;
  Timestamp timestamp = 2;
  EventLogPosition position = 3;
  bytes data = 4;
}

message EventFetchedRequest {
  // position to ack the server about read event
  EventLogPosition position = 1;
}

message EventFetchedResponse {
}
