syntax = "proto3";

package proto;
option go_package = "github.com/Codename-Uranium/tunnel/proto";

import "timestamp.proto";


// EventType defines types to use with the eventlog package
enum EventType {
  Unspecified = 0;
  PeerAdd = 1;
  PeerRemove = 2;
  PeerUpdate = 3;
  // PeerTraffic is for the periodic traffic updates
  PeerTraffic = 4;
}

// PeerInfo describes the peer interacting with the tunnel node
message PeerInfo {
  enum PeerType {
    Unknown = 0;
    WireGuard = 1;
  }

  string userID = 1;
  string installationID = 2;
  string sessionID = 3;
  PeerType peerType = 4;
  Timestamp created = 5;
  Timestamp updated = 6;
  Timestamp expires = 7;
  uint64 bytesTx = 8;
  uint64 bytesRx = 9;
}

